--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,7 +36,8 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_variables.scss",
-        "styles/partials/_index.scss"
+        "styles/partials/_index.scss",
+        "styles/partials/_scrollbar.scss"
       ]
     }
   ],
