fixed logic of image call

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,20 +2,7 @@
   "name": "project4",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [
-    {
-      "path": "styles/partials/_index.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
-    },
-    {
-      "path": "styles/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
-    },
-    {
-      "path": "styles/partials/_variables.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
-    }
-  ],
+  "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [],
     "hideSystemFiles": true,
@@ -152,7 +139,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\"],\"sourceMap\":true}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
